--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -3397,33 +3397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After NC11 Column Creation:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/v1/rpt43fxj323_cj0c2q98_b7r0000gn/T/ipykernel_76822/3502696013.py:10: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  df['NC11'] = df.apply(check_school_distress, axis=1)\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'nc13_columns' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[142], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNC11\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mapply(check_school_distress, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter NC11 Column Creation:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(df[\u001b[43mnc13_columns\u001b[49m \u001b[38;5;241m+\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNC11\u001b[39m\u001b[38;5;124m'\u001b[39m]]\u001b[38;5;241m.\u001b[39mtail())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nc13_columns' is not defined"
+      "After NC11 Column Creation:\n",
+      "       QN137a  QN137b  QN137c  QN137d  QN137e NC11\n",
+      "22064     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22065     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22066     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22067     NaN     NaN     NaN     NaN     NaN    0\n",
+      "22068     1.0     1.0     1.0     1.0     1.0    1\n"
      ]
     }
    ],
@@ -3451,7 +3438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3467,9 +3454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before NC12 Column Creation:\n",
+      "       QN137h  QN137i  QN137j  QN137k  QN137l  QN137m  QN137n\n",
+      "22064     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22065     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22066     2.0     2.0     2.0     2.0     2.0     2.0     2.0\n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN\n",
+      "22068     1.0     1.0     1.0     1.0     1.0     1.0     1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Define columns for NC12\n",
     "nc12_columns = ['QN137h', 'QN137i', 'QN137j', 'QN137k', 'QN137l', 'QN137m', 'QN137n']\n",
@@ -3481,9 +3482,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After NC12 Column Creation:\n",
+      "       QN137h  QN137i  QN137j  QN137k  QN137l  QN137m  QN137n NC12\n",
+      "22064     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22065     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22066     2.0     2.0     2.0     2.0     2.0     2.0     2.0    1\n",
+      "22067     NaN     NaN     NaN     NaN     NaN     NaN     NaN    0\n",
+      "22068     1.0     1.0     1.0     1.0     1.0     1.0     1.0    1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/rpt43fxj323_cj0c2q98_b7r0000gn/T/ipykernel_76822/2170207709.py:10: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  df['NC12'] = df.apply(check_discrimination, axis=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Define function to check for general experiences of discrimination\n",
     "def check_discrimination(row):\n",
@@ -3508,7 +3531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3524,9 +3547,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  NC1 NC2 NC3 NC4 NC5 NC6 NC7 NC8 NC9 NC10 NC11 NC12\n",
+      "0   1   0   0   1   1   0   0   1   0    0    0    0\n",
+      "1   0   1   1   0   0   1   0   1   0    0    0    0\n",
+      "2   0   0   0   0   0   0   0   1   0    0    0    0\n",
+      "3   0   0   1   1   1   0   0   0   0    0    0    0\n",
+      "4   0   0   0   1   1   0   0   1   1    1    1    1\n"
+     ]
+    }
+   ],
    "source": [
     "nc_columns = ['NC1', 'NC2', 'NC3', 'NC4', 'NC5', 'NC6', 'NC7', 'NC8', 'NC9', 'NC10', 'NC11', 'NC12']\n",
     "print(df[nc_columns].head())"
@@ -3549,9 +3585,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New columns created in lieu of QN1:\n",
+      "   QN1  CATAGE9-12  CATAGE13-16  CATAGE17-19\n",
+      "0    5           0            1            0\n",
+      "1    8           0            1            0\n",
+      "2    5           0            1            0\n",
+      "3    4           1            0            0\n",
+      "4    4           1            0            0\n",
+      "5    6           0            1            0\n",
+      "6    9           0            0            1\n",
+      "7    1           1            0            0\n",
+      "8   10           0            0            1\n",
+      "9    9           0            0            1\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Replace 'N' with 0 and handle NaN values by filling them with 0\n",
     "df_new_notext['QN1'] = df_new_notext['QN1'].replace('N', 0).fillna(0).astype(int)\n",
@@ -3578,9 +3633,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New columns created in lieu of QN2\n",
+      "   QN2  CATMALE  CATFEMALE\n",
+      "0    2        0          1\n",
+      "1    2        0          1\n",
+      "2    1        1          0\n",
+      "3    2        0          1\n",
+      "4    2        0          1\n",
+      "5    2        0          1\n",
+      "6    1        1          0\n",
+      "7    2        0          1\n",
+      "8    1        1          0\n",
+      "9    1        1          0\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Replace 'Not Answered' with 0 and handle NaN values in QN2\n",
     "df_new_notext['QN2'] = df_new_notext['QN2'].replace('Not Answered', 0).fillna(0).astype(int)\n",
@@ -3606,9 +3680,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New columns created in lieu of QN3\n",
+      "   QN3  CATMIDDLE  CATHIGHSCHOOL\n",
+      "0    2          1              0\n",
+      "1    1          1              0\n",
+      "2    2          1              0\n",
+      "3    2          1              0\n",
+      "4    1          1              0\n",
+      "5    3          1              0\n",
+      "6    6          0              1\n",
+      "7    7          0              1\n",
+      "8    7          0              1\n",
+      "9    6          0              1\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Replace 'Not Answered' and 'Ungraded or other grade' with 0, and handle NaN values in QN3\n",
     "df_new_notext['QN3'] = df_new_notext['QN3'].replace(['Not Answered', 8], 0).fillna(0).astype(int)\n",
@@ -3634,9 +3727,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New columns created in lieu of QN9\n",
+      "   QN9  CATECIGUSER  CATECIGNONUSER\n",
+      "0    0            0               1\n",
+      "1    1            1               0\n",
+      "2    0            0               1\n",
+      "3   30            1               0\n",
+      "4    0            0               1\n",
+      "5    0            0               1\n",
+      "6   30            1               0\n",
+      "7   30            1               0\n",
+      "8    4            1               0\n",
+      "9    0            0               1\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 1: Replace 'Not Answered', 'Not Displayed', and 'Skipped' with 0, and handle NaN values in QN9\n",
     "df_new_notext['QN9'] = df_new_notext['QN9'].replace(['N', 'Z', 'S'], 0).fillna(0).astype(int)\n",
@@ -3663,9 +3775,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/v1/rpt43fxj323_cj0c2q98_b7r0000gn/T/ipykernel_76822/4123578338.py:1: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df_new_notext_nomissing = df_new_notext.applymap(lambda x: 0 if pd.isna(x) or x not in [0, 1] else x)\n"
+     ]
+    }
+   ],
    "source": [
     "df_new_notext_nomissing = df_new_notext.applymap(lambda x: 0 if pd.isna(x) or x not in [0, 1] else x)"
    ]
@@ -3679,7 +3800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
